working on uploading nodes and edges
